<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SpeechTimer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="speech">Speech</string>
    <string name="evaluation">Evaluation (2 to 3 min)</string>
    <string name="table">Table topic (1 to 2 min)</string>
    <string name="title_activity_timer">Timer</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="play">Play</string>
    <string name="restart">Restart</string>
    <string name="stop">Stop</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="minimum_time">Minimum Time</string>
    <string name="speech_min_time">Speech Minimum Time</string>
    <string name="tt_min_time">Table topic time</string>
    <string name="eval_min_time">Evaluation Time</string>
    <string name="title_activity_report">Timer Report</string>
    <string name="report">Report</string>
    <string name="next_presenter">Who is going to speak?</string>
    <string name="speech_min_max_diff">Difference between Speech min and max duration</string>
    <string name="speech_max_time">Speech Maximum Time</string>

</resources>
