<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <!--
         NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it.
    -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference android:entryValues="@array/pref_speech_time" android:entries="@array/pref_speech_time_titles" android:defaultValue="300" android:title="@string/speech_min_time" android:key="@string/speech_min_time" /><ListPreference android:defaultValue="420" android:summary="7 minutes" android:title="@string/speech_max_time" android:key="@string/speech_max_time" android:entryValues="@array/pref_speech_max_time" android:entries="@array/pref_speech_max_time_titles" android:dependency="@string/speech_min_time"/>
    
    
    <ListPreference android:entryValues="@array/pref_short_speech_time" android:defaultValue="60" android:title="@string/tt_min_time" android:key="@string/tt_min_time" android:entries="@array/pref_short_speech_time_titles"/>
    <ListPreference android:entryValues="@array/pref_short_speech_time" android:defaultValue="120" android:title="@string/eval_min_time" android:key="@string/eval_min_time" android:entries="@array/pref_short_speech_time_titles"/>

</PreferenceScreen>
