<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="169dp"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/speech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="buttonOnClick"
        android:text="@string/speech"
        android:textAlignment="center" />

    <Button
        android:id="@+id/table_topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/speech"
        android:layout_alignRight="@+id/speech"
        android:layout_below="@+id/speech"
        android:onClick="buttonOnClick"
        android:text="@string/table" />

    <Button
        android:id="@+id/evaluation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/table_topic"
        android:layout_alignRight="@+id/table_topic"
        android:layout_below="@+id/table_topic"
        android:onClick="buttonOnClick"
        android:text="@string/evaluation" />

    <Button
        android:id="@+id/report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:onClick="buttonOnClick"
        android:text="@string/report" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/next_presenter"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

</RelativeLayout>